@@ -405,7 +405,7 @@ void Game_window::write_saveinfo()
 	out.put(timeinfo->tm_sec);	// 15
 
 	// Packing for the rest of the structure
-	for (j = (long)&(((SaveGame_Details *)0)->reserved0); j < sizeof(SaveGame_Details); j++)
+	for (j = reinterpret_cast<long>(&(((SaveGame_Details *)0)->reserved0)); j < sizeof(SaveGame_Details); j++)
 		out.put(0);
 
 	for (i=0; i<party_size ; i++)
@@ -437,7 +437,7 @@ void Game_window::write_saveinfo()
 		Write2(out, npc->get_property(Actor::health));
 
 		// Packing for the rest of the structure
-		for (j = (long)&(((SaveGame_Party *)0)->reserved0); j < sizeof(SaveGame_Party); j++)
+		for (j = reinterpret_cast<long>(&(((SaveGame_Party *)0)->reserved0)); j < sizeof(SaveGame_Party); j++)
 			out.put(0);
 	}
 
@@ -479,7 +479,7 @@ void Game_window::read_saveinfo(std::ifstream &in,
 	in.get(details->real_second);	// 15
 
 	// Packing for the rest of the structure
-	for (j = (long)&(((SaveGame_Details *)0)->reserved0); j < sizeof(SaveGame_Details); j++)
+	for (j = reinterpret_cast<long>(&(((SaveGame_Details *)0)->reserved0)); j < sizeof(SaveGame_Details); j++)
 		in.get();
 
 	party = new SaveGame_Party[details->party_size];
@@ -492,19 +492,19 @@ void Game_window::read_saveinfo(std::ifstream &in,
 		party[i].flags = Read4(in);
 		party[i].flags2 = Read4(in);
 
-		in.get((char &)party[i].food);
-		in.get((char &)party[i].str);
-		in.get((char &)party[i].combat);
-		in.get((char &)party[i].dext);
-		in.get((char &)party[i].intel);
-		in.get((char &)party[i].magic);
-		in.get((char &)party[i].mana);
-		in.get((char &)party[i].training);
+		in.get(reinterpret_cast<char &>(party[i].food));
+		in.get(reinterpret_cast<char &>(party[i].str));
+		in.get(reinterpret_cast<char &>(party[i].combat));
+		in.get(reinterpret_cast<char &>(party[i].dext));
+		in.get(reinterpret_cast<char &>(party[i].intel));
+		in.get(reinterpret_cast<char &>(party[i].magic));
+		in.get(reinterpret_cast<char &>(party[i].mana));
+		in.get(reinterpret_cast<char &>(party[i].training));
 
 		party[i].health = Read2(in);
 
 		// Packing for the rest of the structure
-		for (j = (long)&(((SaveGame_Party *)0)->reserved0); j < sizeof(SaveGame_Party); j++)
+		for (j = reinterpret_cast<long>(&(((SaveGame_Party *)0)->reserved0)); j < sizeof(SaveGame_Party); j++)
 			in.get();
 	}
 }
