@@ -1,3 +1,11 @@
+2001-10-06  Dancer Vesperman  <dancer@users.sourceforge.net>
+
+	* actors.cc: Cast conversions
+	* gamedat.cc: ditto
+	* gamewin.cc: ditto
+	* npcnear.cc: ibid
+	* schedule.cc: as above
+
 2001-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* Makefile.be: fixed typo
 
